--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -38,6 +38,7 @@
     "enableTranslation": true,
     "nativeLanguage": "en",
     "languages": ["en"],
-    "blueprints": []
+    "blueprints": [],
+    "lastLiquibaseTimestamp": 1599389641000
   }
 }
